# Plug

backend/: db.sqlite3  pyproject.toml  requirements.txt
backend/backend/: settings.py  urls.py
backend/store/: models.py  mySerializers.py  urls.py  utils.py  views.py
backend/store/migrations/: 0001_initial.py  0002_alter_product_image_count.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  style.css
frontend/src/components/: bestSellersList.js  blogPosts.js  categoriesList.js  dealsList.js  footer.js  imageCarousel.js  navBar.js  plugPerks.js  productsList.js  trendingList.js
frontend/src/pages/: cartPage.js  checkoutPage.js  homePage.js  productInfoPage.js
