[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asgiref==3.5.2",
    "django==4.1",
    "django-cors-headers==3.13.0",
    "djangorestframework==3.13.1",
    "pytz==2022.2.1",
    "sqlparse==0.4.2",
    "tzdata==2022.2",
]
